Create test for Service and Controller (still empty for controller and not cmplet yet for service)